feat: Upgrade to java 21